--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -5,3 +5,11 @@
 @import 'layout/fonts.scss';
 @import 'layout/base.scss';
 //Blocks
+@import 'blocks/hero.scss';
+@import 'blocks/header.scss';
+@import 'blocks/nav.scss';
+@import 'blocks/btn.scss';
+@import 'blocks/next_section.scss';
+@import 'blocks/title.scss';
+@import 'blocks/best.scss';
+@import 'blocks/reviews.scss';
