--- a/src/styles/scss/blocks/hero.scss
+++ b/src/styles/scss/blocks/hero.scss
@@ -25,3 +25,10 @@
     line-height: 72px;
 }
 
+.to-next-section{
+    margin-bottom: 30px;
+    background: transparent;
+    border: none;
+    align-self: center;    
+    cursor: pointer;
+}
