--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,9 +1,20 @@
 //Config
 @import 'config/variables.scss';
 @import 'config/mixins.scss';
+
+//font
+@import 'blocks/func.scss';
+
+//@breakpoints
+$tablets: 768px;
+$phones: 480px;
+
+
+
 //Layout
 @import 'layout/fonts.scss';
 @import 'layout/base.scss';
+
 //Blocks
 @import 'blocks/hero.scss';
 @import 'blocks/header.scss';
@@ -13,3 +24,9 @@
 @import 'blocks/title.scss';
 @import 'blocks/best.scss';
 @import 'blocks/reviews.scss';
+@import 'blocks/order.scss';
+@import 'blocks/team.scss';
+@import 'blocks/menu.scss';
+@import 'blocks/map.scss';
+
+
