--- a/src/styles/scss/blocks/best.scss
+++ b/src/styles/scss/blocks/best.scss
@@ -18,6 +18,11 @@
     min-height: 95px;
 }
 
+.best__svg{
+    width: 97px;
+    height: 89px;
+}
+
 .best__item{
     flex: 1;
     display: flex;
@@ -35,3 +40,16 @@
     font-size: 14px;
     line-height: 24px;
 }
+  
+  .svg-beef {
+    fill: #e35028;
+  }
+  
+  .svg-hand {
+    fill: #f9b43b;
+  }
+  
+  .svg-natural {
+    fill: #8bc03f;
+  }
+  
