--- a/src/styles/scss/blocks/btn.scss
+++ b/src/styles/scss/blocks/btn.scss
@@ -7,7 +7,11 @@
     text-decoration: none;
     font-size: 13px;
     font-family: Ubuntu;
-    cursor: pointer;    
+    cursor: pointer; 
+    
+    &--red--order{
+        margin-right: 20px;
+    }
 }
 
 .btn--review{
