--- a/src/styles/scss/layout/base.scss
+++ b/src/styles/scss/layout/base.scss
@@ -1,3 +1,15 @@
+html{
+    font-size: 16px;
+
+    @include tablets{
+        font-size: 14px;
+    }
+
+    @include phones{
+        font-size: 13px;
+    }
+}
+
 html, 
 body{
     height: 100%;
@@ -19,11 +31,13 @@ body{
 
 .container{
     margin: 0 auto;
-    width: 940px;
+    width: 100%;
+    max-width: 940px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    position: relative;
 
     &--without-align{
         justify-content: space-between;
@@ -32,8 +46,6 @@ body{
 
 .wrapper{
     position: relative;
-    width: 100%;
-    min-width: 940px + 20 px;
     min-height: 100%;
     overflow: hidden;
 }
