--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -28,5 +28,8 @@ $phones: 480px;
 @import 'blocks/team.scss';
 @import 'blocks/menu.scss';
 @import 'blocks/map.scss';
+@import 'blocks/nav-mobile.scss';
+@import 'blocks/nav-points.scss';
+@import 'blocks/nav-trigger.scss';
 
 
