--- a/src/styles/scss/blocks/best.scss
+++ b/src/styles/scss/blocks/best.scss
@@ -4,6 +4,9 @@
 
 .best__list{
     display: flex;
+    @include phones {
+        flex-direction: column;
+    }
 }
 
 .best__name{
@@ -28,6 +31,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include phones {
+        flex-direction: row;
+    }
 }
 
 .best__text{
