--- a/src/styles/scss/blocks/hero.scss
+++ b/src/styles/scss/blocks/hero.scss
@@ -8,6 +8,12 @@
 .hero__content{
     display: flex;
     align-items: center;
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0 5%;
+    }
 }
 
 .hero__container{
