--- a/src/styles/scss/blocks/order.scss
+++ b/src/styles/scss/blocks/order.scss
@@ -3,6 +3,10 @@
 
     &__content{
         display: flex;
+        @include tablets {
+            flex-direction: column;
+            padding: 0 3%;
+        }
     }
 }
 
@@ -18,6 +22,10 @@
     &__row{
         display: flex;
         margin-bottom: 20px;
+
+        &__delete{
+            align-items: center;
+        }
     }
 
     &__block{
