--- a/src/styles/scss/blocks/btn.scss
+++ b/src/styles/scss/blocks/btn.scss
@@ -8,6 +8,12 @@
     font-size: 13px;
     font-family: Ubuntu;
     cursor: pointer; 
+
+    &--red{
+        @include tablets {
+            margin-right: 50px; 
+        }
+    }
     
     &--red--order{
         margin-right: 20px;
@@ -19,6 +25,9 @@
     align-self: flex-start;
     border: none;
     cursor: pointer;
+    @include tablets {
+        align-self: center;
+    }
     @include phones {
         display: none;
     }
@@ -26,6 +35,7 @@
     &-phones{
         display: none;
         @include phones {
+            align-self: center;
             display: block;
         }
     }
