--- a/src/styles/scss/blocks/map.scss
+++ b/src/styles/scss/blocks/map.scss
@@ -12,11 +12,19 @@
     bottom: 0;
     left: 0;
     right: 0;
+
+    
     
     &__row{
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @include phones {
+            flex-direction: column;
+            align-items: center;
+            margin-left: 0;
+        }
     }
 
     &__adress{
