--- a/src/styles/scss/blocks/order.scss
+++ b/src/styles/scss/blocks/order.scss
@@ -11,12 +11,35 @@
 }
 
 .form{
-    color: #fff;
-    flex: 1;
-    margin-right: 20px;
+    display: flex;
 
-    &:last-child{
-        margin-right: 0;
+    @include tablets {
+        flex-direction: column;
+        align-items: left;
+        margin-left: 0;
+    }
+
+    &__buttons{
+        @include phones {
+            flex-direction: column;
+            align-items: center;
+            margin-left: 0;
+        }
+    }
+    
+
+    &__column{
+        color: #fff;
+        flex: 1;
+        margin-right: 20px;
+        
+        &:last-child{
+            margin-right: 0;
+        }
+
+        @include tablets {
+            margin-right: 0;
+        }
     }
 
     &__row{
