--- a/src/styles/scss/blocks/team.scss
+++ b/src/styles/scss/blocks/team.scss
@@ -13,7 +13,7 @@
     background: rgba(47, 50, 52, 0.93);
     padding: 5% 7% 0 7%;
     @include tablets {
-        width: 100%;
+        left: 0;
         padding: 0;
     }
 }
@@ -24,6 +24,11 @@
     height: 0;
     overflow: hidden;
     align-items: center;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .team-acco__name{
@@ -32,6 +37,11 @@
     color: #fff;
     text-decoration: none;
     display: flex;
+
+    @include tablets {    
+        font-size: 25px;
+    }
+
     &:before, &:after {
 		content: "";
 		display: block;
@@ -63,6 +73,13 @@
 
 .team-acco__item {
     margin-bottom: 40px;
+    display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 0px;    
+    }
     
       &:last-child {
           margin-bottom: 0;
@@ -114,4 +131,10 @@
     font-size: 14px;
     color: #fff;
     line-height: 24px;
+    
+}
+
+.taem__acco{
+    align-items: center;
+
 }
