--- a/src/styles/scss/blocks/map.scss
+++ b/src/styles/scss/blocks/map.scss
@@ -35,6 +35,11 @@
         font-family: Ubuntu;
         font-size: 14px;
         color: #fff;
+        @include phones {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__number{
