--- a/src/styles/scss/blocks/order.scss
+++ b/src/styles/scss/blocks/order.scss
@@ -21,6 +21,7 @@
 
     &__buttons{
         @include phones {
+            display: flex;
             flex-direction: column;
             align-items: center;
             margin-left: 0;
