--- a/src/styles/scss/blocks/team.scss
+++ b/src/styles/scss/blocks/team.scss
@@ -14,7 +14,6 @@
     padding: 5% 7% 0 7%;
     @include tablets {
         left: 0;
-        padding: 0;
     }
 }
 
@@ -129,6 +128,7 @@
     font-family: Ubuntu;
     font-size: 14px;
     margin-bottom: 15px;
+    
 }
 
 .team-acco__text-content{
@@ -136,6 +136,9 @@
     font-size: 14px;
     color: #fff;
     line-height: 24px;
+    @include tablets {
+        text-align: center;
+    }
     
 }
 
