--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -31,5 +31,9 @@ $phones: 480px;
 @import 'blocks/nav-mobile.scss';
 @import 'blocks/nav-points.scss';
 @import 'blocks/nav-trigger.scss';
+@import 'blocks/burgers.scss';
+@import 'blocks/slider.scss';
+@import 'blocks/scroll-btn.scss';
+
 
 
