--- a/src/styles/scss/blocks/title.scss
+++ b/src/styles/scss/blocks/title.scss
@@ -23,4 +23,14 @@
         margin-left: 7%;
         padding-top: 7%;
     }
+
+    &--burger{
+        color: #fff;
+        text-align: left;
+        line-height: 70px;
+        margin-bottom: 50px;
+        @include tablets{
+            text-align: center;
+        }
+    }
 }
