--- a/src/styles/scss/blocks/nav-trigger.scss
+++ b/src/styles/scss/blocks/nav-trigger.scss
@@ -5,6 +5,11 @@
     right: 28px;
     z-index: 999;
     @include tablets {
+      top: 42px;
+      display: block;
+    }
+    @include phones {
+      top: 48px;
       display: block;
     }
     &__link {
