--- a/src/styles/scss/config/mixins.scss
+++ b/src/styles/scss/config/mixins.scss
@@ -9,3 +9,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@mixin circle($size, $color) {
+    width: $size;
+    height: $size;
+    border-radius: 50%;
+    background-color: $color;
+}
