--- a/src/styles/scss/blocks/team.scss
+++ b/src/styles/scss/blocks/team.scss
@@ -30,6 +30,19 @@
     }
 }
 
+.worker__content-wrapp{
+    display: flex;
+    margin: 20px 0;
+    height: 0;
+    overflow: hidden;
+    align-items: center;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .team-acco__name{
     font-family: Gagalin;
     font-size: 14px;
