--- a/src/styles/scss/blocks/team.scss
+++ b/src/styles/scss/blocks/team.scss
@@ -21,6 +21,7 @@
     display: flex;
     margin: 20px 0;
     height: 0;
+    transition: 0.5s;
     overflow: hidden;
     align-items: center;
 
@@ -32,15 +33,6 @@
 
 .worker__content-wrapp{
     display: flex;
-    margin: 20px 0;
-    height: 0;
-    overflow: hidden;
-    align-items: center;
-
-    @include tablets {
-        flex-direction: column;
-        align-items: center;
-    }
 }
 
 .team-acco__name{
