--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -34,6 +34,7 @@ $phones: 480px;
 @import 'blocks/burgers.scss';
 @import 'blocks/slider.scss';
 @import 'blocks/scroll-btn.scss';
+@import 'blocks/overlay.scss';
 
 
 
