--- a/src/styles/scss/blocks/map.scss
+++ b/src/styles/scss/blocks/map.scss
@@ -1,7 +1,6 @@
-.map{
-    background: url(../images/bg/map-bg.jpg) center center / cover no-repeat;
-    background-size: cover;
-	position: relative;
+.mymap{
+    width: 100%; 
+    height: 100%;
 }
 
 .footer{
